# marke37

./: .gitignore  AUTHORS  README.md  README.rst  setup.cfg
docs/: codigo_linea.rst  conf.py  convertidor.rst  directiva_sphinx.rst  editor_en_linea.rst  errores.rst  especificación.rst  index.rst  plantilla_html.rst  pygments.rst  sublime.rst
marke37/: __init__.py  convertidor_marke37.py  letra.py  letra_im.py  letra_im_html.py  letra_latex.py  linea.py  marke37.py  seccion.py
marke37/plantillas/html/: bulma.html
marke37/test/: run_tests.py  test_letra.py  test_letra_base.py  test_letra_im.py  test_letra_latex.py  test_linea.py  test_seccion.py
marke37/test/archivos/: letra_completa.me37  solo_versos.me37  titulo.me37  titulo_coro_precoro_postcoro.me37  titulo_desfasado.me37  titulo_intro_verso.me37  titulo_intro_verso_outro.me37  titulo_verso_coro_y_puente.me37  titulo_verso_y_coro.me37  titulo_y_dos_versos.me37  titulo_y_dos_versos_lineas_vacias.me37  titulo_y_verso.me37
