[metadata]
name = marke37
author = Carlos Ramos
author_email = carlos@ramoscarlos.com
description = Un convertidor de letras en formato me37 a HTML, Markdown, y otros formatos.
url = https://github.com/ramoscarlos/marke37
license = MIT
version = 1.0.0
[options.entry_points]
console_scripts =
	me37 = marke37.convertidor_marke37:main